--- a/Zurich Dogs - Data Storytelling.ipynb
+++ b/Zurich Dogs - Data Storytelling.ipynb
@@ -5,6 +5,8 @@
    "id": "c63c390c",
    "metadata": {},
    "source": [
+    "<b> ZURICH DOGS STUDY <b>\n",
+    "\n",
     "QUESTIONS TO ASK:\n",
     "\n",
     "    1- Which age group owns the most dogs?\n",
@@ -1291,7 +1293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b3d472",
+   "id": "d2fd75d6",
    "metadata": {},
    "source": [
     "<b>1- Which age group has the most dogs?<b>"
@@ -2223,7 +2225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e3d8a1f",
+   "id": "91631380",
    "metadata": {},
    "source": [
     "<b>4- Which is the most common color in Terrier dogs?<b>\n"
@@ -2232,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "b8516902",
+   "id": "2b8623d9",
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "e1513355",
+   "id": "30f53249",
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2359,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "69f36fb7",
+   "id": "8b0e3650",
    "metadata": {},
    "outputs": [
     {
@@ -2439,7 +2441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7cf8614",
+   "id": "914851b6",
    "metadata": {},
    "source": [
     "The top five colors of terriers are 'tricolor', 'weiss', 'black/tan' and 'schwarz/braun'and 'blue/tan.'"
@@ -2602,7 +2604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7731607f",
+   "id": "66d0bf21",
    "metadata": {},
    "source": [
     "<b> Conclusion:<b>"
@@ -2610,7 +2612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e3b28e",
+   "id": "e5de0888",
    "metadata": {},
    "source": [
     "The age groups 51-60 and 41-50 have the most Terrier owners and district 92 followed by 111 and 101 are the most \n",
@@ -2620,7 +2622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b55820e",
+   "id": "d2d96b06",
    "metadata": {},
    "outputs": [],
    "source": []
